[package]
name = "netview"
version = "0.1.0"
description = "Live view of network connections in a terminal, inspired by Mark Russinovich's tcpview."
authors = ["Bernd Krietenstein <bernd.krietenstein@gmx.de>"]
license = "MIT"
edition = "2024"

[dependencies]
bytesize = "1.3"
chrono = "0.4"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dns-lookup = "2"
futures = "0.3.31"
humantime = "2.1"
netstat2 = "0.9"
num_enum = "0.7"
pprof = { version = "0.11", features = ["flamegraph", "protobuf"] }
ratatui = "0.29.0"
sysinfo = "0.35"
tokio = { version = "1.45.1", features = ["full"] }
