[package]
name = "netview"
version = "0.1.0"
description = "Live view of network connections in a terminal, inspired by Mark Russinovich's tcpview."
authors = ["Bernd Krietenstein <bernd.krietenstein@gmx.de>"]
license = "MIT"
edition = "2024"

[dependencies]
bytesize = "1.3"
chrono = "0.4"
color-eyre = "0.6.3"
crossterm = { version = "0.29", features = ["event-stream"] }
dns-lookup = "3"
futures = "0.3.31"
humantime = "2.1"
netstat2 = "0.11"
num_enum = "0.7"
ratatui = { version = "0.30.0" }
sysinfo = "0.38"
tokio = { version = "1.48.0", features = ["full"] }
